--- a/app/src/style.css
+++ b/app/src/style.css
@@ -89,6 +89,13 @@ main .records-area > .chart-area > .above-area > .chart {
   margin-right: 1.953125vh;
   position: relative;
 }
+main .records-area > .chart-area > .above-area > .chart > .type {
+  font-size: 2.197265625vh;
+  white-space: nowrap;
+  position: absolute;
+  top: 0%;
+  left: 1.953125vh;
+}
 main .records-area > .chart-area > .above-area > .chart > .hexagon {
   background-color: #D0D0D0;
   height: 43.318359375vh;
@@ -102,7 +109,6 @@ main .records-area > .chart-area > .above-area > .chart > .hexagon > .average-he
   background-color: black;
   height: 43.318359375vh;
   width: 37.514799669vh;
-  clip-path: polygon(18.7573998345vh 2.283960498vh, 32.4844401814vh 13.733869248vh, 34.121398465vh 30.5295884326vh, 18.7573998345vh 37.913311084vh, 0.5372119313vh 32.1786100781vh, 1.7990222181vh 11.8682558057vh);
   margin-top: 9.6611328125vh;
   margin-left: 50%;
   transform: translate(-50%, 0%);
@@ -260,10 +266,15 @@ main .top5-area > .top5-songs-area > span:first-child {
   white-space: nowrap;
 }
 main .top5-area > .top5-songs-area > span > .song-name {
-  font-size: 4.39453125vh;
-  display: flex;
-  align-items: center;
   margin-left: 1.953125vh;
+  display: flex;
+  font-size: 2.197265625vh;
+  white-space: nowrap;
+  align-items: center;
+}
+main .top5-area > .top5-songs-area > span > .artist-name {
+  white-space: nowrap;
+  align-items: center;
 }
 main .top5-area > .favorite-songs-area {
   background-color: #D0D0D0;
@@ -286,15 +297,20 @@ main .top5-area > .favorite-songs-area > span:first-child {
   white-space: nowrap;
 }
 main .top5-area > .favorite-songs-area > span > .song-name {
-  font-size: 4.39453125vh;
-  display: flex;
-  align-items: center;
   margin-left: 1.953125vh;
+  display: flex;
+  font-size: 2.197265625vh;
+  white-space: nowrap;
+  align-items: center;
+}
+main .top5-area > .favorite-songs-area > span > .artist-name {
+  white-space: nowrap;
+  align-items: center;
 }
 
 .top-left {
   position: relative;
-  left: -10%;
+  margin-left: -1.953125vh;
 }
 
 .center {
@@ -307,6 +323,6 @@ main .top5-area > .favorite-songs-area > span > .song-name {
 .bottom-right {
   position: relative;
   margin-top: auto;
-  margin-left: auto;
   margin-right: 1.953125vh;
+  margin-left: auto;
 }/*# sourceMappingURL=style.css.map */
